# envoir

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SEPARATION.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
brand/: README.md
client/: README.md  index.html  sw.js
client/css/: app.css
client/js/: app.js  avatar.js  compose.js  identity.js  keyname.js  mesh-sim.js  mote.js  onboarding.js  profileModal.js  provenance.js  seed.js  shell.js  store.js  ui.js
client/test/: i18n.test.mjs  net.test.mjs  sanitize.test.mjs
console/: README.md  index.html
console/css/: console.css
console/js/: app.js  bus.js  crypto.js  session.js  setup.js  shell.js  store.js  ui.js
crates/conformance-runner/: Cargo.toml
crates/conformance-runner/src/: construction.rs  lib.rs  main.rs  sync.rs
crates/conformance-runner/tests/: run_over_vectors.rs  sync_vectors.rs
crates/dmtap-clustersync/: Cargo.toml
crates/dmtap-clustersync/src/: cluster.rs  crdt.rs  error.rs  journal.rs  lib.rs  recon.rs  wire.rs
crates/dmtap-core/: Cargo.toml  vectors.json  vectors_gen.rs.inc  wordlist.txt
crates/dmtap-core/src/: cad.rs  capability.rs  cbor.rs  deniable.rs  id.rs  identity.rs  keyname.rs  kt.rs  lib.rs  location.rs  mixnet.rs  mote.rs  profile.rs  pubobj.rs  pubsub.rs  push.rs  rtc.rs  sphinx.rs  suite.rs
crates/dmtap-core/tests/: conformance_vectors.rs  security_regressions.rs
crates/dmtap-core/tools/: gen_wordlist.py
crates/dmtap-mail/: Cargo.toml  README.md
crates/dmtap-mail/src/: auth.rs  autodiscover.rs  jmap.rs  lib.rs  mime.rs  net.rs  pop3.rs  search.rs  smtp.rs
crates/dmtap-mail/src/imap/: mod.rs  parser.rs  response.rs  sequence.rs  session.rs
crates/dmtap-mail/tests/: imap_session.rs
crates/dmtap-mls/: Cargo.toml
crates/dmtap-mls/src/: error.rs  lib.rs  session.rs  sframe.rs
crates/dmtap-mls/tests/: groups.rs
crates/dmtap-namechain-rpc/: Cargo.toml
crates/dmtap-namechain-rpc/src/: abi.rs  ens.rs  lib.rs  rpc.rs  sns.rs  transport.rs
crates/dmtap-namechain-rpc/tests/: live_rpc.rs
crates/dmtap-naming/: Cargo.toml
crates/dmtap-naming/src/: base64url.rs  canonical.rs  dns.rs  error.rs  keypackage.rs  kt.rs  lib.rs  merkle.rs  namechain.rs  reconcile.rs  resolver.rs  restype.rs
crates/dmtap-operator/: Cargo.toml
crates/dmtap-operator/src/: authz.rs  dns.rs  http.rs  lib.rs  policy.rs  queue.rs
crates/dmtap-p2p/: Cargo.toml
crates/dmtap-p2p/src/: discovery.rs  lib.rs  tests.rs
crates/dmtap-seam/: CONTRACT.md  Cargo.toml
crates/dmtap-seam/src/: gateway_authz.rs  lib.rs  metering.rs  policy.rs  provisioning.rs
crates/dmtap-send/: Cargo.toml
crates/dmtap-send/src/: http.rs  key.rs  lib.rs  pipeline.rs  scope.rs  seam.rs
crates/dmtap-sync-wasm/: Cargo.toml  README.md  build.sh
crates/dmtap-sync-wasm/src/: abi.rs  err.rs  jsonval.rs  lib.rs
crates/dmtap-sync-wasm/test/: native-trace.json  trace.mjs  vectors.test.mjs
crates/dmtap-sync-wasm/tests/: native_trace.rs
crates/downgrade-tests/: Cargo.toml
crates/downgrade-tests/src/: lib.rs
crates/downgrade-tests/tests/: downgrade_invariants.rs
crates/netsim/: Cargo.toml
crates/netsim/src/: client.rs  lib.rs  main.rs  metrics.rs  path.rs  profile.rs  sim.rs  topology.rs
crates/netsim/tests/: report.rs
deploy/: .env.example  Dockerfile.gateway  Dockerfile.node  README.md  docker-compose.yml  selfhost.sh
desktop/: README.md
docs/: SCREENSHOTS.md  architecture.md  capture-screenshots.mjs  contributing.md  faq.md  getting-started.md  index.md  naming.md  privacy.md  protocol.md  pwa-and-push.md  roadmap.md  security.md
docs/features/: calendar.md  contacts.md  identity.md  mail.md  self-hosting.md
docs/screenshotter/: lib.mjs
examples/: personal.toml
formal/: EXPECTED.txt  README.md  kt_append_only.pv  mixnet_unlinkability.pv  mls_group_keys.pv  run.sh  suite_ratchet.pv
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: common.rs  deniable_frame.rs  deniable_payload.rs  deniable_prekey_bundle.rs  device_cert.rs  domain_directory.rs  envelope.rs  gateway_admission.rs  gateway_alias.rs  identity.rs  manifest.rs  mix_directory.rs  mix_node_descriptor.rs  move_record.rs  payload.rs  recovery_policy.rs
fuzz/tests/: property_naming.rs
gateway/: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SEPARATION.md  docker-compose.yml  setup.sh
gateway/examples/: personal.toml
gateway/src/: admin.rs  attestation.rs  authz.rs  b64.rs  directory.rs  dkim.rs  dmarc.rs  dns.rs  imap_access.rs  inbound.rs  inbound_tcp.rs  legacy_net.rs  lib.rs  main.rs  mesh.rs  multidomain.rs  net.rs  outbound.rs  outbound_guard.rs  outbound_tcp.rs  personal.rs  pop3_access.rs  provenance.rs  smtp_submission.rs  spf.rs
gateway/tests/: admin_api.rs  daemon.rs  gateway.rs  i18n.rs  pop3_access.rs  smtp_submission.rs  sockets.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: full_roundtrip.rs  gateway_alias_roundtrip.rs  gateway_authz_antispam.rs  gateway_provenance.rs  legacy_to_dmtap.rs  resolution_forms_e2e.rs
node/: Cargo.toml  README.md
node/src/: config.rs  daemon.rs  deniable.rs  jmap_api.rs  journal.rs  keystore.rs  lib.rs  main.rs  mixdir.rs  naming.rs  node.rs  onion.rs  outbound.rs  pow.rs  pubserve.rs  reassembly.rs  seen.rs  send_api.rs  syncserve.rs
node/tests/: crate_integration.rs  daemon.rs  durability.rs  jmap_listener.rs  pub_listener.rs  send_api.rs  sync_listener.rs  tier_reliability.rs  two_node_e2e.rs
site/: README.md  index.html
site/css/: style.css
site/docs-src/: architecture.md  faq.md  getting-started.md  index.md  roadmap.md  security.md
site/js/: main.js  mesh.js
src/: alias_map.rs  attestation.rs  authz.rs  directory.rs  dkim.rs  dmarc.rs  dns.rs  inbound.rs  inbound_tcp.rs  lib.rs  main.rs  mta_sts.rs  mx.rs  outbound.rs  personal.rs  spf.rs
status/: README.md  index.html
status/css/: status.css
status/js/: store.js  ui.js
superadmin/: README.md  index.html
superadmin/css/: superadmin.css
tests/: gateway.rs  imap_access.rs  sockets.rs
(+41 files in other folders)
