# envoir-gateway — split out of the env-oir/envoir monorepo (see SEPARATION.md). It pins the two
# shared libraries it needs (dmtap-core, dmtap-mail) to published git tags of that monorepo rather
# than path deps, so this repo builds standalone with no circular dependency.
[workspace]

[package]
name = "envoir-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
description = "DMTAP legacy SMTP gateway — the optional bridge between DMTAP and legacy email"
repository = "https://github.com/env-oir/envoir-gateway"
homepage = "https://github.com/env-oir/envoir-gateway"

# The gateway is the ONLY component that speaks SMTP and the ONLY one not content-blind
# (the legacy leg is unavoidably plaintext). It is OPTIONAL and fades as adoption grows.
# See the DMTAP spec repo (../dmtap/07-gateway.md). Stateless: durability is punted to the edges.
#
# The reference bridge is std-only and synchronous: all network effects (mesh delivery, the
# outbound SMTP socket, DNS lookups for keys/attestation/DKIM) are abstracted behind traits, so
# the whole inbound/outbound flow is exercised in-process. Real sockets are a thin trait impl.

[dependencies]
# Shared DMTAP primitives — MOTE build/seal, Identity + Ed25519, canonical §18 CBOR (spec §1, §2).
# Pinned to a published tag of the env-oir/envoir monorepo (the split precondition — SEPARATION.md).
dmtap-core = { git = "https://github.com/env-oir/envoir", tag = "v0.1.0" }
# RFC 5322 parse/render + SMTP DATA→MoteDraft conversion (reused for the message translation), plus
# the IMAP4rev2/rev1 server + MailStore projection wired into the optional legacy IMAP access server
# (`net` feature = std-only blocking TCP helpers; no extra crates, no async runtime).
# BOTH deps MUST share one git source (same tag) so Cargo unifies dmtap-core to a single copy —
# distinct tag strings resolve as distinct sources and produce a type-mismatched duplicate crate.
dmtap-mail = { git = "https://github.com/env-oir/envoir", tag = "v0.1.0", features = ["net"] }

# --- DKIM delegated-selector signing (spec §7.3; RFC 8463 ed25519-sha256, RFC 6376 relaxed) ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# --- CSPRNG for the DNS query transaction-id (off-path-spoof resistance, no DNSSEC here) ---
# Already present transitively (via the crypto stack); taken as a direct, explicit dependency so
# the DNS id is drawn from the OS CSPRNG rather than a predictable clock reading. Not a heavy dep.
getrandom = "0.2"

# --- Errors ---
thiserror = "1"

# --- SIGINT/SIGTERM graceful-shutdown handling for the daemon runtime (`run`) ---
# std has no signal API; libc's async-signal-safe `signal()` lets the daemon install a handler that
# flips an atomic the accept loop polls. Already in the build graph (transitive); taken directly and
# used only by the `run` binary. No async runtime, no signal-hook: one tiny, ubiquitous dependency.
libc = "0.2"

# --- Real SMTP-over-TLS sockets (the one dep worth taking, spec §7.3 STARTTLS) ---
# rustls (ring provider) terminates/initiates STARTTLS; pemfile loads operator cert/key;
# webpki-roots is the default trust anchor set for validating destination MX certs.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# --- Public Suffix List for RFC 7489 §3.2 DMARC organizational-domain determination ---
# `psl` is a self-contained, `#![no_std]`, forbid(unsafe) crate that EMBEDS a compiled snapshot of
# Mozilla's Public Suffix List (no build-time fetch, no runtime data file); the exact snapshot is
# pinned in Cargo.lock. Used by `dmarc::organizational_domain` to compute the registrable
# "public-suffix + 1 label", so `attacker.co.uk` and `victim.co.uk` are correctly treated as
# distinct registrants rather than folded together under relaxed alignment. See dmarc.rs module docs
# for the residual (fixed-snapshot) narrowing and the strict-alignment fail-closed guard.
psl = "2.1.219"

[dev-dependencies]
# Self-signed cert generation for the in-process loopback TLS tests only (never at runtime).
rcgen = "0.13"

[lib]
name = "envoir_gateway"
path = "src/lib.rs"

[[bin]]
name = "envoir-gateway"
path = "src/main.rs"
