# cargo-fuzz project — NOT a member of the main `envoir` workspace (the `[workspace]` table
# below detaches it, per the standard cargo-fuzz convention: libFuzzer/nightly-only build flags
# must never leak into `cargo build --workspace` / `cargo test --workspace` on stable).
#
# Run with: `cargo +nightly fuzz run <target>` (see README.md).

[package]
name = "dmtap-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dmtap-core]
path = "../crates/dmtap-core"

[dependencies.dmtap-naming]
path = "../crates/dmtap-naming"

# Device-cluster sync CRDT + wire objects (§5.6 / §18.6.3) — fuzzed by `clustersync_merge` for
# ClusterSyncFrame/ClusterOp decode and OR-Set + DeathReg + LWW merge convergence (D3).
[dependencies.dmtap-clustersync]
path = "../crates/dmtap-clustersync"

# --- node key-derived gateway alias (§3.9, §7) — `envoir-node`'s library crate is named `dmtap`
# (see `../node/Cargo.toml` `[lib]`); every existing consumer in this workspace (`integration`,
# `dmtap-p2p`) imports it the same way, as `dmtap::...`.
[dependencies.envoir-node]
path = "../node"

# --- gateway admission challenge + local-part allocation (§7.9, §7.10, §9) ---
[dependencies.envoir-gateway]
path = "../gateway"

[workspace]
members = ["."]

# One target per decodable wire object (§18) — the real attack surface: canonical-CBOR decoders
# fed fully attacker-controlled bytes. Each target's contract (see fuzz_targets/*.rs and the
# shared `common.rs`): (1) never panic / never UB on ANY input; (2) any `Ok` decode result MUST
# re-encode to byte-identical input (canonical-form idempotence, §18.1.1 — a decoder that accepts
# non-canonical bytes has a bug, since two different wire encodings would then be treated as "the
# same" object by this node but possibly differently by another).

[[bin]]
name = "identity"
path = "fuzz_targets/identity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "device_cert"
path = "fuzz_targets/device_cert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "recovery_policy"
path = "fuzz_targets/recovery_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "move_record"
path = "fuzz_targets/move_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envelope"
path = "fuzz_targets/envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "payload"
path = "fuzz_targets/payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest"
path = "fuzz_targets/manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mix_node_descriptor"
path = "fuzz_targets/mix_node_descriptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mix_directory"
path = "fuzz_targets/mix_directory.rs"
test = false
doc = false
bench = false

[[bin]]
name = "domain_directory"
path = "fuzz_targets/domain_directory.rs"
test = false
doc = false
bench = false

[[bin]]
name = "deniable_prekey_bundle"
path = "fuzz_targets/deniable_prekey_bundle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "deniable_frame"
path = "fuzz_targets/deniable_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "deniable_payload"
path = "fuzz_targets/deniable_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "capability_token"
path = "fuzz_targets/capability_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "capability_revocation"
path = "fuzz_targets/capability_revocation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kt_sth"
path = "fuzz_targets/kt_sth.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kt_inclusion_proof"
path = "fuzz_targets/kt_inclusion_proof.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kt_consistency_proof"
path = "fuzz_targets/kt_consistency_proof.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sphinx_cell"
path = "fuzz_targets/sphinx_cell.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sphinx_routing_command"
path = "fuzz_targets/sphinx_routing_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sphinx_surb"
path = "fuzz_targets/sphinx_surb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sphinx_fragment_header"
path = "fuzz_targets/sphinx_fragment_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dns_txt"
path = "fuzz_targets/dns_txt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dns_svcb"
path = "fuzz_targets/dns_svcb.rs"
test = false
doc = false
bench = false

# --- new parsing/decoding surfaces (§3.9, §3.12, §7.9) ---

[[bin]]
name = "naming_classify"
path = "fuzz_targets/naming_classify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "namechain_resolve"
path = "fuzz_targets/namechain_resolve.rs"
test = false
doc = false
bench = false

# --- new deep protocol-path targets (recently-changed paths + broad decode/merge coverage) ---

# 1. Envelope/MOTE decode + the §2.7 validate path incl. the S2 context-binding gate (0x0211).
[[bin]]
name = "envelope_validate"
path = "fuzz_targets/envelope_validate.rs"
test = false
doc = false
bench = false

# 2. Manifest decode + Merkle root — guards the M2 empty-chunks fix (no panic in merkle_root).
[[bin]]
name = "manifest_merkle"
path = "fuzz_targets/manifest_merkle.rs"
test = false
doc = false
bench = false

# 3. The strict canonical-CBOR decoder in isolation (decode/encode/decode stability).
[[bin]]
name = "cbor_canonical"
path = "fuzz_targets/cbor_canonical.rs"
test = false
doc = false
bench = false

# 4. KeyRotation decode + the S1 authorize gate (0x0121) with a synthesized policy/quorum.
[[bin]]
name = "key_rotation"
path = "fuzz_targets/key_rotation.rs"
test = false
doc = false
bench = false

# 5. Clustersync frame/op decode + the D3 OR-Set/DeathReg/LWW merge convergence.
[[bin]]
name = "clustersync_merge"
path = "fuzz_targets/clustersync_merge.rs"
test = false
doc = false
bench = false

# 6a. Capability-token decode + offline delegation-chain verification (no forgery/escalation).
[[bin]]
name = "capability_chain"
path = "fuzz_targets/capability_chain.rs"
test = false
doc = false
bench = false

# 6b. Sphinx fixed-length binary parsing across all four §18.5.4 layouts.
[[bin]]
name = "sphinx_parse"
path = "fuzz_targets/sphinx_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gateway_alias"
path = "fuzz_targets/gateway_alias.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gateway_admission"
path = "fuzz_targets/gateway_admission.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
