[package]
name = "envoir-gateway"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
description = "DMTAP legacy SMTP gateway — the optional bridge between DMTAP and legacy email"
repository = "https://example.invalid/envoir"

# The gateway is the ONLY component that speaks SMTP and the ONLY one not content-blind
# (the legacy leg is unavoidably plaintext). It is OPTIONAL and fades as adoption grows.
# See the DMTAP spec repo (../dmtap/07-gateway.md). Stateless: durability is punted to the edges.
#
# The reference bridge is std-only and synchronous: all network effects (mesh delivery, the
# outbound SMTP socket, DNS lookups for keys/attestation/DKIM) are abstracted behind traits, so
# the whole inbound/outbound flow is exercised in-process. Real sockets are a thin trait impl.

[dependencies]
# Shared DMTAP primitives — MOTE build/seal, Identity + Ed25519, canonical §18 CBOR (spec §1, §2).
dmtap-core = { path = "../crates/dmtap-core" }
# RFC 5322 parse/render + SMTP DATA→MoteDraft conversion (reused for the message translation).
dmtap-mail = { path = "../crates/dmtap-mail" }

# --- DKIM delegated-selector signing (spec §7.3; RFC 8463 ed25519-sha256, RFC 6376 relaxed) ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# --- Errors ---
thiserror = "1"

[lib]
name = "envoir_gateway"
path = "src/lib.rs"

[[bin]]
name = "envoir-gateway"
path = "src/main.rs"
