[package]
name = "envoir-node"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
description = "Envoir reference node — identity, mailbox, mesh, messaging, and files for the Decentralized Message Transfer & Access Protocol (DMTAP)"
repository = "https://example.invalid/envoir"

# The node is the whole client-side: identity, mailbox, mesh participation, delivery,
# messaging (MLS), files, and client protocols. See the DMTAP spec repo (../dmtap/) for the spec.
#
# Dependencies below are the INTENDED reference stack (grounded against current standards).
# They are commented until the corresponding module is implemented, so the scaffold builds
# with std only. Uncomment as each subsystem lands.

[dependencies]
# --- Shared DMTAP core primitives (identity, MOTE, key-name, suites, content addressing) ---
# Moved out of this crate into the workspace-shared library; the node re-exports it (spec §1, §2, §3.9).
dmtap-core = { path = "../crates/dmtap-core" }

# --- Client protocol servers (spec §8): IMAP/POP/SMTP-submission + JMAP + autodiscovery, ---
# projecting the MOTE store for legacy and modern mail clients. The `net` feature adds the
# blocking TCP listeners the `run` command wires up (a real node terminates TLS first, §8.2).
dmtap-mail = { path = "../crates/dmtap-mail", features = ["net"] }

# --- Durable outbound-queue journal (spec §19.3.3, §0.5, §4.7) ---
# The sender-side retry queue is the sole durability mechanism and MUST survive restart. The
# file-backed journal serializes a node snapshot as JSON; the sealed Envelope inside each queued
# entry is stored as its canonical §18 CBOR bytes (so it round-trips exactly via det_cbor).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Daemon runtime (spec §0.2 "the node is the running whole-client side") ---
# A real node is a long-running process, not a one-shot demo: it loads its persisted identity +
# durable journal, serves its interfaces, and stays up until SIGINT/SIGTERM. A current-thread tokio
# runtime drives the retry/poll loop and the async graceful-shutdown signal handling. The §8 client
# servers (dmtap-mail `net`) remain blocking thread-per-connection, spawned alongside.
tokio = { version = "1", features = ["rt", "macros", "signal", "time"] }

# --- Durable keystore encryption-at-rest (spec §1.2, §1.4) ---
# `init` writes the root identity seed + X25519 sealing secret to a keystore on disk. With a
# passphrase set the secret material is sealed with ChaCha20-Poly1305 under an Argon2id-derived key;
# without one the keystore is written in a clearly-marked plaintext-for-dev mode. `getrandom` seeds
# fresh key material + the KDF salt / AEAD nonce; `zeroize` wipes secrets from memory after use.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.10"
getrandom = "0.2"
zeroize = "1"

# --- Serialization (spec §README, deterministic CBOR RFC 8949 §4.2, bytewise key order) ---
# ciborium = "0.2"          # CBOR; verify it emits/validates deterministic (core) form

# --- Hashing / content addressing (spec §2; BLAKE3-256, with hash-agility prefix) ---
# blake3 = "1"

# --- Classical crypto (spec §1.1 suite 0x01) — now provided via dmtap-core ---
# ed25519-dalek = "2"       # Ed25519 (RFC 8032), PureEd25519
# x25519-dalek  = "2"       # X25519 (RFC 7748)
# hpke = "0.12"             # HPKE (RFC 9180): DHKEM(X25519,HKDF-SHA256)/HKDF-SHA256/ChaCha20Poly1305

# --- Post-quantum (spec §1.1 suite 0x02; hybrid) ---
# ml-kem = "0.2"           # FIPS 203 ML-KEM-768
# ml-dsa = "0.0"           # FIPS 204 ML-DSA-65   (track maturity/audit)
# x-wing  = "*"            # X-Wing hybrid KEM (ML-KEM-768 ⊕ X25519) for HPKE — preferred combiner

# --- Messaging / groups (spec §5; MLS RFC 9420) ---
# Real MLS groups are wrapped in the workspace-shared `dmtap-mls` crate (openmls 0.8, ciphersuite
# 0x0001 X25519/AES128GCM/SHA256/Ed25519) and re-exported here as `dmtap::groups`. Handshakes
# (Commit/Welcome, kind 0x06 `group_event`) travel over the ordered committer log (the DS, §5.1);
# application messages travel over the mesh transport as `Frame::Group`.
dmtap-mls = { path = "../crates/dmtap-mls" }

# --- Naming / resolution (spec §3): name→key with RFC 6962 key-transparency ---
# The real, fail-closed `name@domain → KT-verified pinned key` resolver. The node uses its
# `Resolver` / `KeyPackageSource` seams (with the in-memory harnesses where no network layer is
# wired) to KT-verify a recipient BEFORE addressing outbound mail — never a TOFU pin on unreachable
# KT (§3.3). Replaces the node's directory stub as the *authoritative* resolution path.
dmtap-naming = { path = "../crates/dmtap-naming" }

# --- DMTAP-Auth (spec §13): the node's own sovereign login/session ---
# The origin-bound login ceremony + DPoP-style key-bound session. The node signs an RP challenge
# with its root IK to establish a `BoundSession` (its own login), no central identity provider.
dmtap-auth = { path = "../crates/dmtap-auth" }

# --- Deniable 1:1 mode (spec §5.2.1): X3DH + Double Ratchet, distinct from MLS groups ---
# A pairwise deniable channel whose authentication is a shared-key MAC (no signature ⇒ repudiable),
# used to route a 1:1 MOTE with cryptographic deniability alongside the signed HPKE + MLS paths.
dmtap-deniable = { path = "../crates/dmtap-deniable" }

# --- Mesh / transport (spec §4; libp2p) ---
# The real libp2p mesh transport lives in the SEPARATE `dmtap-p2p` crate, which depends on THIS
# crate and implements the `crate::transport::Transport` trait (so the heavy libp2p/tokio graph
# stays out of the node/mail/gateway build paths). It is therefore selectable through the trait
# seam — as a `Box<dyn Transport>` or a `SelectableTransport` (see `transport.rs`) — NOT a path
# dependency here (that would be a cycle). The in-tree in-memory + TCP transports remain the
# default; `dmtap_p2p::Libp2pTransport` drops into the same seam.

# --- Mixnet (spec §4.4, §6; Sphinx / Loopix-style) ---
# sphinx-packet = "*"      # Sphinx packet format (evaluate nym crates vs. own)

# --- Recovery (spec §1.4) ---
# NOTE: prefer VSS (Feldman/Pedersen) over plain Shamir; consider SLIP-0039 (mnemonic+Shamir)
#       and FROST (RFC 9591) threshold signatures to avoid ever reassembling the secret.
# frost-ed25519 = "*"

# --- Async runtime / CLI (scaffold) ---
# tokio = { version = "1", features = ["full"] }
# clap  = { version = "4", features = ["derive"] }

[lib]
name = "dmtap"
path = "src/lib.rs"

[[bin]]
name = "envoir-node"
path = "src/main.rs"
