[package]
name = "conformance-runner"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Executable §18-conformance proof: drives dmtap-core's committed KAT vectors.json (and, where byte-backed, the ../dmtap conformance-suite catalog) through the reference codec and reports PASS/FAIL per case. This is the harness a second implementer runs to check their own decoder/signer against the same fixed inputs."
publish = false

[dependencies]
dmtap-core = { path = "../dmtap-core" }
# Additional workspace crates driven by `construction.rs` so more `suite.json` construction-todo
# cases can be honestly EXECUTED against real reference code, rather than left skipped, when the
# behavior the case describes lives outside dmtap-core proper (auth ceremony, name resolution/KT
# quorum+freshness, MLS groups) — see the module docs on each construction
# function for exactly what is proven and why the dependency is the honest way to test it.
dmtap-auth = { path = "../dmtap-auth" }
dmtap-naming = { path = "../dmtap-naming" }
dmtap-deniable = { path = "../dmtap-deniable" }
dmtap-mls = { path = "../dmtap-mls" }
# The §5.6 device-cluster sync reference (ClusterSyncFrame/ClusterOp validation + the OR-Set/LWW
# CRDT merge) — drives the DMTAP-SYNC-01..05 construction-todo cases. A regular (not dev-only)
# dependency because `construction.rs` is a module of this crate's LIBRARY, not a test file.
dmtap-clustersync = { path = "../dmtap-clustersync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

[[bin]]
name = "conformance-runner"
path = "src/main.rs"
