[package]
name = "dmtap-clustersync"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "DMTAP device-cluster sync (spec §5.6 / §18.6.3) — the ClusterSyncFrame/ClusterOp wire objects, range-based Merkle set-reconciliation, hash-chained journal backfill, and the OR-Set + HLC-LWW CRDT merge that converges an owner's personal device cluster with no primary and no central server"
repository = "https://example.invalid/envoir"

[dependencies]
# Every wire primitive this crate needs — the canonical §18.1 CBOR codec (Cv/Fields/encode/decode),
# content addressing (ContentId = BLAKE3-256, the suite hash), identity + DeviceCert membership
# authentication, and the DeniablePayload guard — is public API of core. This crate adds NO new
# third-party dependency: it is std + dmtap-core only.
dmtap-core = { path = "../dmtap-core" }
