[package]
name = "dmtap-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "DMTAP core primitives — crypto suites, content addressing, identity lifecycle, the 8-word key-name, and the MOTE object — shared by the Envoir reference node and gateway"
repository = "https://github.com/env-oir/envoir"
homepage = "https://github.com/env-oir/envoir"
keywords = ["dmtap", "email", "decentralized", "identity", "crypto"]
categories = ["cryptography", "email"]

[dependencies]
# --- Signing (spec §1.1 suite 0x01: Ed25519, RFC 8032) ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
# --- KEM key material (spec §1.1: X25519, RFC 7748) ---
x25519-dalek = { version = "2", features = ["static_secrets"] }
# --- HPKE payload sealing (spec §2.4; RFC 9180 DHKEM(X25519)/HKDF-SHA256/ChaCha20Poly1305) ---
hpke = "0.12"
# --- Suite 0x02 (PQ hybrid) crypto — spec §1.1, §1.3, §16.7, §18.1.6 ------------------------
# X-Wing hybrid KEM (draft-connolly-cfrg-xwing-kem, draft 06): X25519 ⊕ ML-KEM-768 with the
# IND-CCA SHA3-256 combiner, so Envelope confidentiality holds if EITHER share is unbroken.
# `getrandom` gives the no-arg `generate_keypair()`/`encapsulate()` (the crate's rand_core is a
# different major than ours, so we avoid crossing an RNG-version boundary by hand).
# Maturity note: `x-wing` 0.1.0 is a young pure-Rust crate tracking the draft — real X-Wing, not a
# placeholder, but not yet an audited 1.0; it is the closest audited-ish option to the spec's KEM.
x-wing = { version = "0.1.0", features = ["getrandom"] }
# ML-DSA-65 / FIPS 204 (RustCrypto) post-quantum signatures. Composed AND-wise with Ed25519 so a
# forgery requires breaking BOTH. `Signer` here is the deterministic ML-DSA variant (no RNG arg).
ml-dsa = "0.1.1"
# AEAD over the hybrid KEM's derived content key — ChaCha20-Poly1305, matching suite 0x01's AEAD.
chacha20poly1305 = "0.10"
# --- Hashing / content addressing (spec §2.2, §3.9: BLAKE3-256 with agility prefix) ---
blake3 = "1"
# --- Deterministic CBOR (spec §README, RFC 8949) ---
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
# --- KDF for blinded delivery tags (spec §2.2a: BT = HKDF(shared_secret, epoch_day)) ---
hkdf = "0.12"
sha2 = "0.10"
# --- RNG ---
rand_core = { version = "0.6", features = ["getrandom"] }
# --- Errors ---
thiserror = "1"

[dev-dependencies]
# Conformance vector generation + self-check (examples/gen_vectors.rs, tests/conformance_vectors.rs).
serde_json = "1"
